# react-native-security-shield

./: README.md  index.js  package.json
android/: build.gradle  gradle.properties  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  anti_frida.cpp  native_integrity.cpp
android/src/main/java/com/securityshield/: SecurityShieldModule.kt  SecurityShieldPackage.kt
android/src/main/java/com/securityshield/config/: GeneratedSecurityConfig.kt  SecurityConfig.kt  SecurityConfigParser.kt
android/src/main/java/com/securityshield/core/: SecurityEvaluator.kt  SecurityResult.kt
android/src/main/java/com/securityshield/detection/: EmulatorDetection.kt  SecurityDetection.kt
android/src/main/java/com/securityshield/integrity/: NativeIntegrity.kt  SignatureUtil.kt
android/src/main/java/com/securityshield/ssl/: PinnedHttpClientFactory.kt  PinnedTrustManager.kt
android/src/main/java/com/securityshield/utils/: Logger.kt
android/src/main/res/xml/: network_security_config_debug.xml
ios/: SecurityShield.m  SecurityShield.podspec
ios/config/: GeneratedSecurityConfig.swift  NativeSecurityConfig.swift
ios/core/: SecurityEvaluator.swift
ios/detection/: EmulatorDetection.swift  SecurityDetection.swift
ios/native/: ActivityStarter.m  AppExit.m  NativeSecurityGate.m
ios/ssl/: PinnedSessionDelegate.swift
ios/ui/: ActivityStarter.swift  AppExit.swift
scripts/: encodePins.js  generateNativeConfig.js  postinstall.js
src/: SecurityShield.ts  types.ts  utils.ts
